--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,6 @@
 modLoader="javafml" 
-loaderVersion="[31,)" 
+loaderVersion="[31,)"
+license="ISC license"
 [[mods]]
 modId="spaghetti"
 version="${file.jarVersion}" 
