--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,3 @@
 protected net.minecraft.inventory.container.WorkbenchContainer field_217070_e # worldPosCallable
 protected net.minecraft.entity.item.ItemEntity field_184533_c # ITEM
+public net.minecraft.client.renderer.entity.layers.BipedArmorLayer func_241736_a_(Lnet/minecraft/inventory/EquipmentSlotType;)Lnet/minecraft/client/renderer/entity/model/BipedModel; # func_241736_a_
